Added Lemmatizer and other funcs

--- a/Lab/sts/STS_Project.ipynb
+++ b/Lab/sts/STS_Project.ipynb
@@ -129,9 +129,17 @@
     "## Preprocessing \n",
     "# remove punctuations [X]\n",
     "# remove stopwords [X]\n",
+    "# Stanford to Wordnet POS-Tag [X]\n",
     "# stemming \n",
     "# lemmatizing \n",
-    "# TF-IDF\n"
+    "# TF-IDF\n",
+    "# Lexical Similarities -> Levenstein Distance, Jaccard Distance\n",
+    "# FuzzyWuzzy \n",
+    "\n",
+    "\n",
+    "## Performance \n",
+    "# Pearson \n",
+    "# Confidence Interval?"
    ]
   },
   {
