--- a/Lab/sts/STS_Project.ipynb
+++ b/Lab/sts/STS_Project.ipynb
@@ -79,9 +79,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'load_sentences' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-ab4759489318>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# Loading the Data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_sentences\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTRAIN_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mload_gs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTRAIN_GS_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mload_sentences\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTEST_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mload_gs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTEST_GS_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'load_sentences' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# TRAINING PATH\n",
     "TRAIN_PATH = './data/train/input/'\n",
@@ -92,7 +104,7 @@
     "TEST_GS_PATH = './data/test/gs/'\n",
     "\n",
     "# Loading the Data \n",
-    "X_train, y_train, X_test, y_test = LoadSentences(TRAIN_PATH), LoadGS(TRAIN_GS_PATH),LoadSentences(TEST_PATH), LoadGS(TEST_GS_PATH)\n"
+    "X_train, y_train, X_test, y_test = load_sentences(TRAIN_PATH), load_gs(TRAIN_GS_PATH),load_sentences(TEST_PATH), load_gs(TEST_GS_PATH)\n"
    ]
   },
   {
@@ -109,12 +121,7 @@
     }
    ],
    "source": [
-    "# Doing Data Augmentation \n",
     "\n",
-    "#Back Translation \n",
-    "# Translating from one language (English) to another (French, Italian, German, etc..)\n",
-    "# Then translating back to the original language (English)\n",
-    "# English --> Another Language --> English \n",
     "\n",
     "# Lets look at how many total values we have\n",
     "print(f\"We have a total of {X_train.shape[0]} sentence pairs\")"
@@ -126,20 +133,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Preprocessing \n",
+    "## Preprocessing\n",
+    "# TODO = [] \n",
     "# remove punctuations [X]\n",
     "# remove stopwords [X]\n",
     "# Stanford to Wordnet POS-Tag [X]\n",
-    "# stemming \n",
-    "# lemmatizing \n",
-    "# TF-IDF\n",
-    "# Lexical Similarities -> Levenstein Distance, Jaccard Distance\n",
-    "# FuzzyWuzzy \n",
+    "# stemming []\n",
+    "# lemmatizing [X]\n",
+    "# TF-IDF []\n",
+    "\n",
+    "## FEATURE ENGINEERING\n",
+    "# Lexical Similarities -> Levenstein Distance, Jaccard Distance []\n",
+    "# FuzzyWuzzy []\n",
+    "\n",
+    "## MODEL\n",
+    "# SVM \n",
+    "# NN? CNN?\n",
+    "\n",
+    "## Data Augmentation\n",
+    "# Back Translation => English --> Another Language --> English \n",
+    "# AEDA\n",
     "\n",
     "\n",
-    "## Performance \n",
-    "# Pearson \n",
-    "# Confidence Interval?"
+    "## Final Eval\n",
+    "# Pearson []\n",
+    "# Confidence Interval? []"
    ]
   },
   {
