--- a/Lab/sts/STS_Project.ipynb
+++ b/Lab/sts/STS_Project.ipynb
@@ -1,6 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Preprocessing\n",
+    "# TODO = [] \n",
+    "# TF-IDF [] -> Term Frequency - Inverse Data Frequency (TF-IDF)\n",
+    "\n",
+    "## FEATURE ENGINEERING\n",
+    "# Lexical Similarities -> Levenstein Distance, Jaccard Distance []\n",
+    "# FuzzyWuzzy []\n",
+    "\n",
+    "## MODEL\n",
+    "# SVM \n",
+    "# NN? CNN?\n",
+    "\n",
+    "## Data Augmentation\n",
+    "# Back Translation => English --> Another Language --> English \n",
+    "# AEDA\n",
+    "\n",
+    "\n",
+    "## Final Eval\n",
+    "# Pearson []\n",
+    "# Confidence Interval? []"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -47,122 +75,25 @@
     "- We need to create 3 variations: \n",
     "    1. \"Standard\" distance similarities \n",
     "    2. \"XTRa Train\" --> With more training data doing back-translation and AEDA \n",
-    "    3. \"Embeddings\" and use pre-trained models with a Deep L-layered model \n",
     "\n",
     "\n",
     "*STEPS:*\n",
     "1. Preprocess textual data \n",
-    "    - Read in sentence pairs\n",
-    "    - Tokenize \n",
-    "    - Pos Tag \n",
-    "    - Remove stopwords and punctuation \n",
+    "    - Read in sentence pairs --> DONE\n",
+    "    - Tokenize --> DONE\n",
+    "    - Pos Tag ---> DONE\n",
+    "    - Remove stopwords and punctuation  --> DONE\n",
     "\n",
     "2. Extract Features \n",
     "    - Similarity measures \n",
     "    - Word frequency \n",
     "    - Tf-IDF ?\n",
-    "3. Generate Extra Data (I)"
+    "3. Generate Extra Data (?)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Data Loader file with two functions\n",
-    "from File_Loader import *\n",
-    "\n",
-    "# Preprocessing file with several prerpocessing functions\n",
-    "from pre_processing import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'load_sentences' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-ab4759489318>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# Loading the Data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_sentences\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTRAIN_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mload_gs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTRAIN_GS_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mload_sentences\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTEST_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mload_gs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTEST_GS_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'load_sentences' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# TRAINING PATH\n",
-    "TRAIN_PATH = './data/train/input/'\n",
-    "TRAIN_GS_PATH = './data/train/gs/'\n",
-    "\n",
-    "# TEST PATH\n",
-    "TEST_PATH = 'data/test/input/'\n",
-    "TEST_GS_PATH = './data/test/gs/'\n",
-    "\n",
-    "# Loading the Data \n",
-    "X_train, y_train, X_test, y_test = load_sentences(TRAIN_PATH), load_gs(TRAIN_GS_PATH),load_sentences(TEST_PATH), load_gs(TEST_GS_PATH)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We have a total of 2234 sentence pairs\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "# Lets look at how many total values we have\n",
-    "print(f\"We have a total of {X_train.shape[0]} sentence pairs\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Preprocessing\n",
-    "# TODO = [] \n",
-    "# remove punctuations [X]\n",
-    "# remove stopwords [X]\n",
-    "# Stanford to Wordnet POS-Tag [X]\n",
-    "# stemming []\n",
-    "# lemmatizing [X]\n",
-    "# TF-IDF []\n",
-    "\n",
-    "## FEATURE ENGINEERING\n",
-    "# Lexical Similarities -> Levenstein Distance, Jaccard Distance []\n",
-    "# FuzzyWuzzy []\n",
-    "\n",
-    "## MODEL\n",
-    "# SVM \n",
-    "# NN? CNN?\n",
-    "\n",
-    "## Data Augmentation\n",
-    "# Back Translation => English --> Another Language --> English \n",
-    "# AEDA\n",
-    "\n",
-    "\n",
-    "## Final Eval\n",
-    "# Pearson []\n",
-    "# Confidence Interval? []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -221,45 +152,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to /Users/Eric/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Building our pipeline\n",
-    "PIPELINE = {}"
+    "# Data Loader file with two functions\n",
+    "from data_loader_ import *\n",
+    "\n",
+    "# Preprocessing file with several prerpocessing functions\n",
+    "from pre_processing import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TRAINING PATH\n",
+    "TRAIN_PATH = './data/train/input/'\n",
+    "TRAIN_GS_PATH = './data/train/gs/'\n",
+    "\n",
+    "# TEST PATH\n",
+    "TEST_PATH = 'data/test/input/'\n",
+    "TEST_GS_PATH = './data/test/gs/'\n",
+    "\n",
+    "# Loading the Data \n",
+    "X_train, y_train, X_test, y_test = load_sentences(TRAIN_PATH), load_gs(TRAIN_GS_PATH),load_sentences(TEST_PATH), load_gs(TEST_GS_PATH)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'net revenue rose to $3.99 billion from $3.85 billion during the same quarter last year.'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We have a total of 2234 sentence pairs\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lets look at how many total values we have\n",
+    "print(f\"We have a total of {X_train.shape[0]} sentence pairs\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a man is riding a bicycle.\n",
+      "['a', 'man', 'is', 'riding', 'a', 'bicycle']\n",
+      "['man', 'riding', 'bicycle']\n",
+      "[('man', 'NN'), ('riding', 'VBG'), ('bicycle', 'NN')]\n",
+      "['man', 'rid', 'bicycle']\n"
+     ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
+    "# choosing a random sentence and see if the pre-processing works \n",
     "#SEED = np.random.seed(42)\n",
-    "samples = np.array(X_train.SentA).reshape(-1,)\n",
-    "sample_sentence = np.random.choice(samples, 1)[0]\n",
-    "sample_sentence"
+    "#samples = np.array(X_train.SentA).reshape(-1,)\n",
+    "#sample_sentence = np.random.choice(samples, 1)[0]\n",
+    "\n",
+    "sample_sentence = X_train.iloc[0,:].SentA\n",
+    "sample_sentence2 = X_train.iloc[0,:].SentB\n",
+    "# original sentence \n",
+    "print(sample_sentence)\n",
+    "# stripping the punctuation works \n",
+    "print(strip_punctuation(sample_sentence))\n",
+    "# stripping the stopwords works \n",
+    "print(strip_stopwords_punctuation(sample_sentence))\n",
+    "# saving the tokenized sentence \n",
+    "toked_sent = strip_stopwords_punctuation(sample_sentence)\n",
+    "toked_sent = clean_replace_unwanted_chars(toked_sent)\n",
+    "# getting the POS-Tag\n",
+    "print(get_pos_tag(toked_sent))\n",
+    "#saving the pos_tagged sentence \n",
+    "pos_tagged = get_pos_tag(toked_sent)\n",
+    "# getting the lemmas \n",
+    "toked_sent_lemm = get_lemmas(pos_tagged)\n",
+    "print(toked_sent_lemm)\n",
+    "\n",
+    "\n",
+    "def check_sent(sentA, sentB):\n",
+    "    print(strip_punctuation(sentA))\n",
+    "    print(strip_punctuation(sentB))\n",
+    "    print(strip_stopwords_punctuation(sentA))\n",
+    "    print(strip_stopwords_punctuation(sentB))\n",
+    "    toked_sentA = strip_stopwords_punctuation(sentA)\n",
+    "    toked_sentA = clean_replace_unwanted_chars(toked_sentA)\n",
+    "    toked_sentB = strip_stopwords_punctuation(sentB)\n",
+    "    toked_sentB = clean_replace_unwanted_chars(toked_sentB)\n",
+    "    pos_taggedA = get_pos_tag(toked_sentA)\n",
+    "    pos_taggedB = get_pos_tag(toked_sentB)\n",
+    "    print(get_pos_tag(toked_sentA))\n",
+    "    print(get_pos_tag(toked_sentB))\n",
+    "    toked_sent_lemmA = get_lemmas(pos_taggedA)\n",
+    "    toked_sent_lemmB = get_lemmas(pos_taggedB)\n",
+    "    print(toked_sent_lemmA)\n",
+    "    print(toked_sent_lemmB)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we get all the sentences \n",
+    "# strip the punctuation mark\n",
+    "#extract the feature names \n",
+    "\n",
+    "vec = TfidfVectorizer()\n",
+    "resp = vec.fit_transform([sample_sentence, sample_sentence2])\n",
+    "feature_names = vec.get_feature_names()\n",
+    "\n",
+    "dense_list = resp.todense().tolist()\n",
+    "\n",
+    "# the sentences we used\n",
+    "indices = ['SentA','SentB']\n",
+    "# final df with the TFIDF\n",
+    "df = pd.DataFrame(dense_list, columns=feature_names)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'man', 'is', 'riding', 'a', 'bicycle']\n",
+      "['a', 'man', 'is', 'riding', 'a', 'bike']\n",
+      "['man', 'riding', 'bicycle']\n",
+      "['man', 'riding', 'bike']\n",
+      "[('man', 'NN'), ('riding', 'VBG'), ('bicycle', 'NN')]\n",
+      "[('man', 'NN'), ('riding', 'VBG'), ('bike', 'NN')]\n",
+      "['man', 'rid', 'bicycle']\n",
+      "['man', 'rid', 'bike']\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_sent(sample_sentence, sample_sentence2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Wordnet' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-98-3525305b1727>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mWordnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msynset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'Wordnet' is not defined"
+     ]
+    }
+   ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>bicycle</th>\n",
+       "      <td>0.630099</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bike</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.630099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>is</th>\n",
+       "      <td>0.448321</td>\n",
+       "      <td>0.448321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>man</th>\n",
+       "      <td>0.448321</td>\n",
+       "      <td>0.448321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>riding</th>\n",
+       "      <td>0.448321</td>\n",
+       "      <td>0.448321</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                0         1\n",
+       "bicycle  0.630099  0.000000\n",
+       "bike     0.000000  0.630099\n",
+       "is       0.448321  0.448321\n",
+       "man      0.448321  0.448321\n",
+       "riding   0.448321  0.448321"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.T.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2234"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# we need to find the characters of all the sentences \n",
+    "toked_sent_all = [nltk.word_tokenize(x) for x in all_sentences]\n",
+    "#toked_sent_all = sum(toked_sent_all, [])\n",
+    "#toked_sent_all_set = set(toked_sent_all)\n",
+    "len(toked_sent_all)\n"
+   ]
   },
   {
    "cell_type": "code",
