added Synset Similarity

--- a/Lab/sts/STS_Project.ipynb
+++ b/Lab/sts/STS_Project.ipynb
@@ -5,6 +5,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "## Preprocessing\n",
     "# TODO = [] \n",
@@ -283,14 +290,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1)-->Score syn-syn2\n",
+      "Synset('bicycle.n.01') Synset('motorcycle.n.01') 0.7272727272727273\n",
+      "(2)-->Score syn2-syn\n",
+      "Synset('motorcycle.n.01') Synset('bicycle.n.01') 0.7272727272727273\n",
+      "(1)-->Score syn-syn2\n",
+      "Synset('bicycle.n.01') Synset('bicycle.n.01') 1.0\n",
+      "(2)-->Score syn2-syn\n",
+      "Synset('bicycle.n.01') Synset('bicycle.n.01') 1.0\n",
+      "(2)-->Score syn2-syn\n",
+      "Synset('bicycle.v.01') Synset('bicycle.n.01') 0.13333333333333333\n",
+      "(1)-->Score syn-syn2\n",
+      "Synset('bicycle.v.01') Synset('motorcycle.n.01') 0.11764705882352941\n",
+      "(1)-->Score syn-syn2\n",
+      "Synset('bicycle.v.01') Synset('bicycle.n.01') 0.13333333333333333\n",
+      "(1)-->Score syn-syn2\n",
+      "Synset('bicycle.v.01') Synset('bicycle.v.01') 1.0\n",
+      "(2)-->Score syn2-syn\n",
+      "Synset('bicycle.v.01') Synset('bicycle.v.01') 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "# we get all the sentences \n",
-    "# strip the punctuation mark\n",
-    "#extract the feature names \n",
+    "# strip punctuation marks \n",
+    "# extract the feature names (words)\n",
+    "# convert to dense -> list \n",
+    "# check for the delta \n",
+    "# are they \"equal\"? |token1| == |token2|\n",
+    "# calculate similarity of the top synsets (token1 to token2) and (token2 to token1)\n",
+    "# keep the similarity values for each of the sentences ! --> Feature for synset similarity!! \n",
     "\n",
+    "# We only use the TF-IDF to look at the synset similarity measure of the two senses (sense1 and sense2)\n",
     "vec = TfidfVectorizer()\n",
     "resp = vec.fit_transform([sample_sentence, sample_sentence2])\n",
     "feature_names = vec.get_feature_names()\n",
@@ -300,12 +345,43 @@
     "# the sentences we used\n",
     "indices = ['SentA','SentB']\n",
     "# final df with the TFIDF\n",
-    "df = pd.DataFrame(dense_list, columns=feature_names)\n"
+    "df = pd.DataFrame(dense_list, columns=feature_names).T\n",
+    "\n",
+    "\n",
+    "df['delta'] = df[0] - df[1]\n",
+    "\n",
+    "\n",
+    "#df.head()\n",
+    "kk = min(df.delta)\n",
+    "ki = max(df.delta)\n",
+    "\n",
+    "abs(kk) == abs(ki)\n",
+    "\n",
+    "from nltk.corpus import wordnet\n",
+    "word1 = df[df['delta']>0].index[0]\n",
+    "word2 = df[df['delta']<0].index[0]\n",
+    "\n",
+    "#synset sim \n",
+    "syn1 = wordnet.synsets(word1)\n",
+    "syn2 = wordnet.synsets(word2)\n",
+    "\n",
+    "for syns in syn1:\n",
+    "    for syns2 in syn2:\n",
+    "        #print(syns, syns2)\n",
+    "        score = syns.wup_similarity(syns2)\n",
+    "        score2 = syns2.wup_similarity(syns)\n",
+    "        if (score != 0) and score is not None:\n",
+    "            print(\"(1)-->Score syn-syn2\")\n",
+    "            print(syns, syns2, score)\n",
+    "        if (score2 != 0) and score2 is not None:\n",
+    "            print(\"(2)-->Score syn2-syn\")\n",
+    "            print(syns2, syns, score2)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -329,18 +405,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Wordnet' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-98-3525305b1727>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mWordnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msynset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'Wordnet' is not defined"
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([Synset('bicycle.n.01'), Synset('bicycle.v.01')],\n",
+       " [Synset('motorcycle.n.01'), Synset('bicycle.n.01'), Synset('bicycle.v.01')])"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1)-->Score syn-syn2\n",
+      "Synset('bicycle.n.01') Synset('motorcycle.n.01') 0.7272727272727273\n",
+      "(2)-->Score syn2-syn\n",
+      "Synset('motorcycle.n.01') Synset('bicycle.n.01') 0.7272727272727273\n",
+      "(1)-->Score syn-syn2\n",
+      "Synset('bicycle.n.01') Synset('bicycle.n.01') 1.0\n",
+      "(2)-->Score syn2-syn\n",
+      "Synset('bicycle.n.01') Synset('bicycle.n.01') 1.0\n",
+      "(2)-->Score syn2-syn\n",
+      "Synset('bicycle.v.01') Synset('bicycle.n.01') 0.13333333333333333\n",
+      "(1)-->Score syn-syn2\n",
+      "Synset('bicycle.v.01') Synset('motorcycle.n.01') 0.11764705882352941\n",
+      "(1)-->Score syn-syn2\n",
+      "Synset('bicycle.v.01') Synset('bicycle.n.01') 0.13333333333333333\n",
+      "(1)-->Score syn-syn2\n",
+      "Synset('bicycle.v.01') Synset('bicycle.v.01') 1.0\n",
+      "(2)-->Score syn2-syn\n",
+      "Synset('bicycle.v.01') Synset('bicycle.v.01') 1.0\n"
      ]
     }
    ],
